[package]
name = "clipboard-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
# MCP server SDK
rmcp = { version = "0.12", features = ["server", "transport-io"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client for Gemini API
reqwest = { version = "0.12", features = ["json"] }

# JSON handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"

# Base64 encoding for images
base64 = "0.22"
